# tc_ai_growth

./: .gitignore  Makefile  README.md
orchestrator/: .env.example  pyproject.toml
orchestrator/deployments/: weekly_report.yaml
orchestrator/deployments/systemd/: README.md  tc-autodeploy.service  tc-autodeploy.timer  tc-dashboard.service  tc-weekly-report.service  tc-weekly-report.timer
orchestrator/profiles/: production.env.example  staging.env.example  tossacycling-production.env.example  tossacycling-staging.env.example
orchestrator/scripts/: autodeploy.sh  smoke.sh
orchestrator/tc_growth/: __init__.py  cli.py  config.py  dashboard.py  investigate.py  memory.py  prompts.py  report.py  validate.py
orchestrator/tc_growth/core/: __init__.py  actions.py  approval.py  budget.py  cost.py  lifecycle.py  opportunities.py  site_intel.py  source_reader.py
orchestrator/tc_growth/runtime/: __init__.py  anthropic_runtime.py  base.py  managed_agents.py
orchestrator/tc_growth/store/: __init__.py  base.py  db.py  records.py  seed.py  sqlite.py
orchestrator/tests/: conftest.py  test_action_registry.py  test_anthropic_runtime.py  test_approvals.py  test_budget.py  test_case_tools.py  test_config_env.py  test_dashboard.py  test_guardrails.py  test_investigation.py  test_lifecycle.py  test_managed_agents.py  test_memory.py  test_model_policy.py  test_profiles.py  test_report_delivery.py  test_report_rules.py  test_search_console_dates.py  test_search_console_filter.py  test_site_intel.py  test_source_reader.py  test_store.py  test_validate.py  test_wp05_finalize.py
(+50 files in other folders)
